objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>GAS Vendor Data</description>
        <inlineHelpText>Active Vendors are CHECKED by default.</inlineHelpText>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Addresses__c</fullName>
        <description>FTTA Application.</description>
        <label>Additional Addresses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assistant_Deputy_Ethics_Official_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The nature of a DEO is that she is responsible for Ethics advice &amp; approvals for the organization and all sub-organizations</description>
        <inlineHelpText>Identifies Assistant Approver responsible for Ethics advice &amp; approvals for the organization and all sub-organizations.</inlineHelpText>
        <label>Assistant Deputy Ethics Official 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Organizations (Assistant Designated Ethics Official1)</relationshipLabel>
        <relationshipName>Organizations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assistant_Deputy_Ethics_Official_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The nature of a DEO is that she is responsible for Ethics advice &amp; approvals for the organization and all sub-organizations</description>
        <inlineHelpText>Identifies Assistant Approver responsible for Ethics advice &amp; approvals for the organization and all sub-organizations.</inlineHelpText>
        <label>Assistant Deputy Ethics Official 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Organizations (Assistant Designated Ethics Official2)</relationshipLabel>
        <relationshipName>Organizations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>The key in a key/value relationship of a list-of-values (LOV) lookup table.  The Code should be unique within a record type.</description>
        <label>Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_User_is_Ethics_Official__c</fullName>
        <description>Formula field used for filtering in Ethics reports. Evaluates the currently logged in user to see if they are the EO on an organization.</description>
        <formula>IF(
    OR(
        Deputy_Ethics_Official__r.User__c = $User.Id,
        Assistant_Deputy_Ethics_Official_1__r.User__c = $User.Id,
        Assistant_Deputy_Ethics_Official_2__r.User__c = $User.Id
       ),true,false
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User is Ethics Official</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DEO_is_Specially_Designated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field to indicate if an Organization's DEO is under a special designation.  Used for OGE-450 form managers. John Jenkins. 2019.05.28.</description>
        <label>DEO is Specially Designated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether an account is logically deleted.  Physical deletion may not be possible if the account is referenced elsewhere.</description>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deputy_Ethics_Official__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The nature of a DEO is that she is responsible for Ethics advice &amp; approvals for the organization and all sub-organizations</description>
        <inlineHelpText>Identifies Approver responsible for Ethics advice &amp; approvals for the organization and all sub-organizations.</inlineHelpText>
        <label>Deputy Ethics Official</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Organizations (Designated Ethics Official)</relationshipLabel>
        <relationshipName>Organizations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ELMS_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>EPA Lean Management System (ELMS) Coordinator for the organization</description>
        <inlineHelpText>EPA Lean Management System (ELMS) Coordinator for the organization</inlineHelpText>
        <label>ELMS Coordinator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Organizations (ELMS Coordinator)</relationshipLabel>
        <relationshipName>OrganizationELMSCoord</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EPA_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in FTTA Application</description>
        <label>Record Id</label>
        <referenceTo>EPA_Agreement__c</referenceTo>
        <relationshipLabel>Collaborator/Partner</relationshipLabel>
        <relationshipName>Partner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EPA_File__c</fullName>
        <description>FTTA License. Created for the navigation to the parent agreement record.</description>
        <formula>HYPERLINK("/"&amp; EPA_Agreement__r.Id, EPA_Agreement__r.EPA_File_2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Please click on the link to go to the agreement.</inlineHelpText>
        <label>EPA File #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Foreign_Domestic__c</fullName>
        <description>FTTA License. Created to capture the Foreign/Domestic input from user.</description>
        <label>Foreign/Domestic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intermediate_Review_Method__c</fullName>
        <description>Picklist field for setting Approval Process parameters for OGE-450 forms. John Jenkins. 2019.05.24.</description>
        <inlineHelpText>Used to set the Approval Process parameters for OGE-450 forms.</inlineHelpText>
        <label>Intermediate Review Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DEO Only</fullName>
                    <default>true</default>
                    <label>DEO Only</label>
                </value>
                <value>
                    <fullName>1st Line Supervisor, DEO</fullName>
                </value>
                <value>
                    <fullName>2nd Line Supervisor, DEO</fullName>
                </value>
                <value>
                    <fullName>ADEO, DEO</fullName>
                </value>
                <value>
                    <fullName>1st Line Supervisor, ADEO, DEO</fullName>
                </value>
                <value>
                    <fullName>2nd Line Supervisor, ADEO, DEO</fullName>
                </value>
                <value>
                    <fullName>DEO and ADEO</fullName>
                    <isActive>false</isActive>
                    <label>DEO and ADEO</label>
                </value>
                <value>
                    <fullName>DEO, ADEO, and Supervisor</fullName>
                    <isActive>false</isActive>
                    <label>DEO, ADEO, and Supervisor</label>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_SIO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field for approval identification. Used for AAT forms. John Jenkins. 2019.05.14.</description>
        <inlineHelpText>Identifies approver for Application Approval form based on submitter's region/organization.</inlineHelpText>
        <label>Local SIO</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Local SIO)</relationshipLabel>
        <relationshipName>Accounts1231623ted77</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Long_Name__c</fullName>
        <label>Long Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lookup_Tags__c</fullName>
        <description>Text field for administrators to be used for filtering records with a single lookup field using shared active lookup filters.  Used for BAP Provisioning, OHR, and AAT forms. John Jenkins. 2019.05.29.</description>
        <label>Lookup Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Nickname__c</fullName>
        <description>Local or unofficial organization name (as opposed to the Organization Name and Description that come from the Federal Personnel and Payroll System (FPPS).  This may be a nickname or shortened name used within a region or program office.</description>
        <inlineHelpText>Unofficial name, or nickname, of the organization used locally, e.g., within a region or program office</inlineHelpText>
        <label>Organization Nickname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMO_RHRO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup(user) Field for PMO/RHRO for OHR forms. John Jenkins. 2019.04.08.</description>
        <label>PMO/RHRO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Organizations</relationshipLabel>
        <relationshipName>Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Used in FTTA Application</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OA</fullName>
                </value>
                <value>
                    <fullName>OAR</fullName>
                </value>
                <value>
                    <fullName>OARM</fullName>
                </value>
                <value>
                    <fullName>OCFO</fullName>
                </value>
                <value>
                    <fullName>OECA</fullName>
                </value>
                <value>
                    <fullName>OEI</fullName>
                </value>
                <value>
                    <fullName>OGC</fullName>
                </value>
                <value>
                    <fullName>OIA</fullName>
                </value>
                <value>
                    <fullName>OIG</fullName>
                </value>
                <value>
                    <fullName>OPPTS</fullName>
                </value>
                <value>
                    <fullName>ORD</fullName>
                </value>
                <value>
                    <fullName>OSWER</fullName>
                </value>
                <value>
                    <fullName>OW</fullName>
                </value>
                <value>
                    <fullName>REG 1</fullName>
                </value>
                <value>
                    <fullName>REG 2</fullName>
                </value>
                <value>
                    <fullName>REG 3</fullName>
                </value>
                <value>
                    <fullName>REG 4</fullName>
                </value>
                <value>
                    <fullName>REG 5</fullName>
                </value>
                <value>
                    <fullName>REG 6</fullName>
                </value>
                <value>
                    <fullName>REG 7</fullName>
                </value>
                <value>
                    <fullName>REG 8</fullName>
                </value>
                <value>
                    <fullName>REG 9</fullName>
                </value>
                <value>
                    <fullName>REG 10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requisitioning_Office__c</fullName>
        <label>Requisitioning Office</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Senior_IT_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Application Approval</description>
        <inlineHelpText>Identifies approver for Application Approval form based on submitter's region/organization.</inlineHelpText>
        <label>Senior IT Leader</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accountsww40</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <description>Short description.  As a text field instead of text area, it can be viewed in a list.  The standard Description field cannot display in table format.</description>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Type__c</fullName>
        <label>Site Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size_of_Business__c</fullName>
        <description>Used in FTTA Application</description>
        <label>Size of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small Business (less than 500)</fullName>
                </value>
                <value>
                    <fullName>Medium Business (500 - 999)</fullName>
                </value>
                <value>
                    <fullName>Large Business (greater than 1,000)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Small_Business_Designation__c</fullName>
        <description>Small business size designation.</description>
        <inlineHelpText>Small business size designation.</inlineHelpText>
        <label>Small Business Designation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Small Disadvantaged Business</fullName>
                </value>
                <value>
                    <fullName>Women-Owned Small Business</fullName>
                </value>
                <value>
                    <fullName>Service-disabled Veteran Owned Small Business</fullName>
                </value>
                <value>
                    <fullName>8(a)</fullName>
                </value>
                <value>
                    <fullName>HUBZone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Startup_5_yrs__c</fullName>
        <description>Used in FTTA Application</description>
        <label>Startup (&lt; 5 yrs)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No (over 5 years)</fullName>
                </value>
                <value>
                    <fullName>Yes (less than 5 years)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_by__c</fullName>
        <description>Used in FTTA Application</description>
        <label>Submitted by</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Center</fullName>
                </value>
                <value>
                    <fullName>EPA</fullName>
                </value>
                <value>
                    <fullName>EPA/Partner</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts_User2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_BPA__c</fullName>
        <description>GAS Vendor Data</description>
        <displayFormat>EP-BPA-{0000000}</displayFormat>
        <inlineHelpText>Vendor BPA Number</inlineHelpText>
        <label>Vendor BPA #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Vendor_Customer_Number__c</fullName>
        <description>GAS Vendor Data</description>
        <inlineHelpText>Vendor Assigned Customer Number.</inlineHelpText>
        <label>Vendor/Customer Number</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vendor_PO__c</fullName>
        <description>GAS Vendor Data</description>
        <displayFormat>EP-PO-{0000000}</displayFormat>
        <inlineHelpText>Vendor Purchase Order Number</inlineHelpText>
        <label>Vendor PO #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Vendor_Record__c</fullName>
        <description>Indicates if the record is a Vendor Record Type.</description>
        <formula>RecordType.DeveloperName="Vendor"</formula>
        <inlineHelpText>Indicates if the record is a Vendor Record Type.</inlineHelpText>
        <label>Vendor Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Terms__c</fullName>
        <description>GAS Vendor Data</description>
        <inlineHelpText>Vendor Contract General Terms</inlineHelpText>
        <label>Vendor Terms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Year BPA</fullName>
                </value>
                <value>
                    <fullName>1 Year PO</fullName>
                </value>
                <value>
                    <fullName>2 Year BPA</fullName>
                </value>
                <value>
                    <fullName>2 Year PO</fullName>
                </value>
                <value>
                    <fullName>3 Year BPA</fullName>
                </value>
                <value>
                    <fullName>3 Year PO</fullName>
                </value>
                <value>
                    <fullName>5 Year BPA</fullName>
                </value>
                <value>
                    <fullName>5 Year PO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Organizations</label>
    </listViews>
    <listViews>
        <fullName>EPA_Orgs_and_IRM</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Short_Description__c</columns>
        <columns>Intermediate_Review_Method__c</columns>
        <columns>Deputy_Ethics_Official__c</columns>
        <columns>Assistant_Deputy_Ethics_Official_1__c</columns>
        <columns>Assistant_Deputy_Ethics_Official_2__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.HR_Org</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>Inactive</value>
        </filters>
        <label>EPA Orgs and IRM</label>
        <sharedTo>
            <group>e450_DEO</group>
            <group>e450_Ethics_Official</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FRS</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Code__c</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>County__c</columns>
        <columns>Site_Type__c</columns>
        <columns>Deleted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.FRS</value>
        </filters>
        <label>FRS</label>
    </listViews>
    <listViews>
        <fullName>FTTA_Licensee</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>EPA_Agreement__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Size_of_Business__c</columns>
        <columns>Foreign_Domestic__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>EPA_Agreement__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>FTTA Partners</label>
    </listViews>
    <listViews>
        <fullName>GAS_Vendors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Vendor_BPA__c</columns>
        <columns>Vendor_PO__c</columns>
        <columns>Vendor_Customer_Number__c</columns>
        <columns>Vendor_Terms__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.GAS_Vendors</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Vendor</value>
        </filters>
        <label>GAS Vendors</label>
    </listViews>
    <listViews>
        <fullName>HR_Orgs</fullName>
        <columns>Code__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Short_Description__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>Deleted__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.HR_Org</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>inactive</value>
        </filters>
        <label>HR Orgs</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>ORD-NRMRL</value>
        </filters>
        <label>My Organizations</label>
    </listViews>
    <listViews>
        <fullName>State</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Code__c</columns>
        <columns>Short_Description__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>Deleted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.State</value>
        </filters>
        <label>State</label>
    </listViews>
    <listViews>
        <fullName>not_sure_list</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>not sure list</label>
    </listViews>
    <recordTypes>
        <fullName>Dummy_Account</fullName>
        <active>true</active>
        <description>Dummy accounts</description>
        <label>Dummy Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>FRS</fullName>
        <active>true</active>
        <description>Facility Registration system (FRS).  Draft.  Contact hinds.timothy@epa.gov for more info</description>
        <label>FRS</label>
    </recordTypes>
    <recordTypes>
        <fullName>FTTA_Licensee</fullName>
        <active>true</active>
        <description>FTTA License Collaborators/Partners</description>
        <label>FTTA Licensee</label>
    </recordTypes>
    <recordTypes>
        <fullName>FTTA_Partner</fullName>
        <active>true</active>
        <description>FTTA Application Collaborators/Partners</description>
        <label>FTTA Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>GAS_Vendors</fullName>
        <active>true</active>
        <description>Capture GAS Vendor information</description>
        <label>GAS Vendors</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Accounts</fullName>
        <active>true</active>
        <label>General Accounts</label>
    </recordTypes>
    <recordTypes>
        <fullName>HR_Org</fullName>
        <active>true</active>
        <description>HR Organizations</description>
        <label>HR Org</label>
    </recordTypes>
    <recordTypes>
        <fullName>State</fullName>
        <active>true</active>
        <description>States and Territories</description>
        <label>State/Territory</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor</fullName>
        <active>true</active>
        <description>Outside organizations that do business with the EPA.</description>
        <label>Vendor</label>
    </recordTypes>
    <validationRules>
        <fullName>Code_reqd</fullName>
        <active>true</active>
        <description>Code required for some record types</description>
        <errorConditionFormula>and( or( RecordType.Name = 'HR Org', RecordType.Name = 'State/Territory' , RecordType.Name = 'State'),  ISNULL( Code__c ))</errorConditionFormula>
        <errorDisplayField>Code__c</errorDisplayField>
        <errorMessage>Code is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IntermReviewMethod_RestrictedTo_DEO_ADEO</fullName>
        <active>true</active>
        <description>Only users listed in the Organization record's DEO and ADEO fields are allowed to change the Intermediate Review Method field.</description>
        <errorConditionFormula>AND(
ISCHANGED( Intermediate_Review_Method__c ),
$User.Id!=Assistant_Deputy_Ethics_Official_1__r.User__r.Id,
$User.Id!=Assistant_Deputy_Ethics_Official_2__r.User__r.Id,
$User.Id!=Deputy_Ethics_Official__r.User__r.Id,
$User.Alias!='mross',
$User.Alias!='jfugh',
$User.Alias!='ETL.BAP'
)</errorConditionFormula>
        <errorMessage>Only the DEO, ADEO1, or ADEO2 of this Organization may change the Intermediate Review Method.</errorMessage>
    </validationRules>
</CustomObject>